[tool.poetry]
name = "e2slib"
version = "0.1.0"
description = ""
authors = ["alexandre-canet-E2S <121625353+alexandre-canet-E2S@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
numpy = "^1.24.3"
seaborn = "^0.12.2"
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.1"}
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-material = "^9.5.13"
mkdocs-markdownextradata-plugin = "^0.2.5"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.8"
pytkdocs = {extras = ["numpy-style"], version = "^0.16.1"}

[tool.poetry.group.dev.dependencies]
yapf = "^0.33.0"
pytest = "^7.3.1"
pylint = "^2.17.4"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
